# saf-logistic

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  DEMO_WALKTHROUGH.html  DEMO_WALKTHROUGH.md  Makefile  README.md  check_duplicates.py  citecart-platform.code-workspace  docker-compose.yml  index.html  seed-demo-data.sh
backend/: Dockerfile.api  Dockerfile.ocr_worker  alembic.ini  pyproject.toml  requirements-ocr.txt  requirements.txt
backend/app/: main.py
backend/app/core/: audit.py  backfill_compliance.py  bootstrap.py  db.py  fix_data.py  generate_operations.py  logging_config.py  middleware.py  security.py  seed.py  seed_saf.py  settings.py  tenant.py  validators.py
backend/app/infra/: celery_app.py  s3.py  tasks.py  tasks_register.py
backend/app/modules/admin/: router.py
backend/app/modules/audit/: router.py
backend/app/modules/auth/: router.py
backend/app/tests/: conftest.py  test_ocr_extractors.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_module_b_referentiels.py  0003_module_c_missions.py  0004_module_d_compliance.py  0005_modules_h_i.py  0006_settings_notifications_audit_credit_notes.py  0007_ocr_doc_type_classification.py  0008_add_super_admin_flag.py  0009_planning_matching_dunning_tendering.py  0010_saf_integration_fields.py  0011_routes_tournees.py  0012_route_model_refactor.py  0013_fix_compliance_duplicates.py  0014_route_run_regulation.py  0015_import_jobs_table.py  0016_operational_data_tables.py  0017_scheduling_and_repairs.py
backend/scripts/: generate_fixtures.py
docs/: 02-modules-A-D.md  (+5 more)
(+218 files in other folders)
