[project]
name = "saf-logistic"
version = "1.0.0"
description = "SaaS B2B pour entreprises de transport routier"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
